--- a/Practica1/app/src/main/res/values/strings.xml
+++ b/Practica1/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="model">Model</string>
     <string name="marca">Marca</string>
     <string name="alias">Alias</string>
+    <string name="eliminar">Eliminar</string>
 </resources>
