--- a/Practica1/app/src/main/res/values-en-rGB/strings.xml
+++ b/Practica1/app/src/main/res/values-en-rGB/strings.xml
@@ -19,4 +19,5 @@
     <string name="plate">Plate</string>
     <string name="eliminar">Delete</string>
     <string name="escriu_matricula">Type a plate</string>
+        <string name="obrirGoogleMaps">Open Maps</string>
 </resources>
